@@ -4,7 +4,8 @@ Security reminder: MediaWiki does not require PHP's register_globals
 setting since version 1.2.0. If you have it on, turn it *off* if you can.
 
 == MediaWiki 1.12.1 ==
-
+* Security: Work around misconfiguration by requiring strict comparisons for
+  in_array in User::isAllowed().
 
 Changes since 1.12.0:
 
